@@ -1,7 +1,8 @@
 package com.example.demo.Controller;
 
-import com.example.demo.Model.PerfilVendedor;
+import com.example.demo.Model.Pedido;
 import com.example.demo.Model.Usuario;
+import com.example.demo.Model.embebidos.PerfilVendedor;
 import com.example.demo.repository.UsuarioRepository;
 import com.example.demo.services.VendedorService;
 import jakarta.servlet.http.HttpSession;
@@ -11,6 +12,7 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
+import java.util.List;
 import java.util.Optional;
 
 @Controller
@@ -27,9 +29,10 @@ public class VendedorController {
      * Muestra el formulario para convertirse en vendedor
      */
     @GetMapping("/registro")
-    public String mostrarFormularioVendedor(HttpSession session, Model model, RedirectAttributes redirectAttributes) {
-        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
+    public String mostrarFormularioVendedor(HttpSession session, Model model,
+            RedirectAttributes redirectAttributes) {
 
+        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
         if (usuario == null) {
             redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
             return "redirect:/usuario/login";
@@ -42,209 +45,183 @@ public class VendedorController {
         }
 
         model.addAttribute("usuario", usuario);
-        return "registro-vendedor"; // Vista con el formulario
+        return "registro-vendedor";
     }
 
     /**
      * Procesa el formulario de registro de vendedor
      */
     @PostMapping("/guardar")
-    public String guardarPerfilVendedor(@RequestParam("razonSocial") String razonSocial,
+    public String guardarPerfilVendedor(
+            @RequestParam("razonSocial") String razonSocial,
             @RequestParam("telefonoContacto") String telefonoContacto,
             @RequestParam("direccionNegocio") String direccionNegocio,
-            @RequestParam("tipoProductos") String tipoProductos,
             @RequestParam(value = "descripcionNegocio", required = false) String descripcionNegocio,
             @RequestParam(value = "cuentaBancaria", required = false) String cuentaBancaria,
             @RequestParam(value = "banco", required = false) String banco,
             HttpSession session,
             RedirectAttributes redirectAttributes) {
         try {
-
             Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
-
             if (usuario == null) {
                 redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
                 return "redirect:/usuario/login";
             }
 
-            // Razón social obligatoria
+            // Validaciones
             if (razonSocial == null || razonSocial.trim().isEmpty()) {
-                redirectAttributes.addFlashAttribute("error", "La razón social es obligatoria.");
+                redirectAttributes.addFlashAttribute("error", "La razón social es obligatoria");
                 return "redirect:/vendedor/registro";
             }
-
-            // Teléfono: mínimo 8 dígitos, solo números
             if (!telefonoContacto.matches("\\d{8,}")) {
                 redirectAttributes.addFlashAttribute("error",
-                        "El teléfono debe tener al menos 8 dígitos y solo números.");
+                        "El teléfono debe tener al menos 8 dígitos y solo números");
                 return "redirect:/vendedor/registro";
             }
-
-            // Dirección obligatoria
             if (direccionNegocio == null || direccionNegocio.trim().isEmpty()) {
-                redirectAttributes.addFlashAttribute("error", "La dirección del negocio es obligatoria.");
+                redirectAttributes.addFlashAttribute("error", "La dirección del negocio es obligatoria");
                 return "redirect:/vendedor/registro";
             }
-
-            // Tipo de productos obligatorio
-            if (tipoProductos == null || tipoProductos.trim().isEmpty()) {
-                redirectAttributes.addFlashAttribute("error", "Debe ingresar el tipo de productos.");
+            if (cuentaBancaria != null && !cuentaBancaria.isBlank()
+                    && cuentaBancaria.length() < 8) {
+                redirectAttributes.addFlashAttribute("error",
+                        "La cuenta bancaria debe tener mínimo 8 dígitos");
                 return "redirect:/vendedor/registro";
             }
-
-            // Cuenta bancaria mínimo 8 caracteres si viene
-            if (cuentaBancaria != null && !cuentaBancaria.isBlank() && cuentaBancaria.length() < 8) {
-                redirectAttributes.addFlashAttribute("error", "La cuenta bancaria debe tener mínimo 8 dígitos.");
-                return "redirect:/vendedor/registro";
-            }
-
-            // Banco obligatorio si cuenta bancaria viene
             if (cuentaBancaria != null && !cuentaBancaria.isBlank()) {
                 if (banco == null || banco.trim().isEmpty()) {
-                    redirectAttributes.addFlashAttribute("error", "Debe indicar el banco de la cuenta.");
+                    redirectAttributes.addFlashAttribute("error",
+                            "Debe indicar el banco de la cuenta");
                     return "redirect:/vendedor/registro";
                 }
             }
 
-            // Crear perfil de vendedor (tu lógica original intacta)
-            PerfilVendedor perfil = vendedorService.crearPerfilVendedor(
+            // Crear perfil — retorna el Usuario actualizado con perfil embebido
+            Usuario usuarioActualizado = vendedorService.crearPerfilVendedor(
                     usuario.getId(),
                     razonSocial,
                     telefonoContacto,
                     direccionNegocio,
-                    tipoProductos,
                     descripcionNegocio,
                     cuentaBancaria,
                     banco);
 
-            // Recargar usuario desde BD (tu lógica original)
-            usuario = usuarioRepository.findById(usuario.getId()).orElse(usuario);
+            // Actualizar sesión con usuario que ya tiene el perfil embebido
+            session.setAttribute("usuarioLogueado", usuarioActualizado);
 
-            // Actualizar usuario en sesión con perfil cargado (tu lógica original)
-            usuario.setPerfilVendedor(perfil);
-            session.setAttribute("usuarioLogueado", usuario);
-
-            System.out.println("Perfil de vendedor creado para: " + usuario.getEmail());
-
-            redirectAttributes.addFlashAttribute("mensaje", "¡Felicidades! Ahora eres vendedor en Cultivus");
+            redirectAttributes.addFlashAttribute("mensaje",
+                    "¡Felicidades! Ahora eres vendedor en Cultivus");
             return "redirect:/vendedor/inicio";
 
         } catch (IllegalArgumentException e) {
-            System.err.println("Error al crear perfil: " + e.getMessage());
             redirectAttributes.addFlashAttribute("error", e.getMessage());
             return "redirect:/vendedor/registro";
         } catch (Exception e) {
-            System.err.println("Error inesperado: " + e.getMessage());
-            e.printStackTrace();
             redirectAttributes.addFlashAttribute("error", "Error al crear el perfil de vendedor");
             return "redirect:/vendedor/registro";
         }
     }
 
     /**
-     * Página de inicio para vendedores (usa la misma vista que usuario/inicio pero
-     * con header de vendedor)
+     * Página de inicio para vendedores
      */
     @GetMapping("/inicio")
-    public String mostrarInicioVendedor(HttpSession session, Model model, RedirectAttributes redirectAttributes) {
-        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
+    public String mostrarInicioVendedor(HttpSession session, Model model,
+            RedirectAttributes redirectAttributes) {
 
+        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
         if (usuario == null) {
             redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
             return "redirect:/usuario/login";
         }
-
         if (!vendedorService.esVendedor(usuario.getId())) {
             redirectAttributes.addFlashAttribute("error", "Debe registrarse como vendedor primero");
             return "redirect:/vendedor/registro";
         }
 
         model.addAttribute("usuario", usuario);
-        return "inicio-vendedor"; // Vista que usa header-vendedor
+        return "inicio-vendedor";
     }
 
     /**
-     * Muestra el dashboard del vendedor
+     * Dashboard del vendedor
      */
     @GetMapping("/dashboard")
-    public String mostrarDashboard(HttpSession session, Model model, RedirectAttributes redirectAttributes) {
-        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
+    public String mostrarDashboard(HttpSession session, Model model,
+            RedirectAttributes redirectAttributes) {
 
+        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
         if (usuario == null) {
             redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
             return "redirect:/usuario/login";
         }
-
         if (!vendedorService.esVendedor(usuario.getId())) {
             redirectAttributes.addFlashAttribute("error", "Debe registrarse como vendedor primero");
             return "redirect:/vendedor/registro";
         }
 
-        // Obtener perfil de vendedor actualizado
-        Optional<PerfilVendedor> perfilOpt = vendedorService.obtenerPerfilPorUsuarioId(usuario.getId());
-        perfilOpt.ifPresent(perfil -> model.addAttribute("perfilVendedor", perfil));
-
+        // El perfil ya viene embebido en el usuario
+        model.addAttribute("perfilVendedor", usuario.getPerfilVendedor());
         model.addAttribute("usuario", usuario);
-        return "Miproductos"; // Vista del dashboard
+        return "Miproductos";
     }
 
     /**
-     * Muestra el perfil completo del vendedor
+     * Perfil del vendedor
      */
     @GetMapping("/perfil")
-    public String mostrarPerfil(HttpSession session, Model model, RedirectAttributes redirectAttributes) {
-        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
+    public String mostrarPerfil(HttpSession session, Model model,
+            RedirectAttributes redirectAttributes) {
 
+        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
         if (usuario == null) {
             redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
             return "redirect:/usuario/login";
         }
 
-        Optional<PerfilVendedor> perfilOpt = vendedorService.obtenerPerfilPorUsuarioId(usuario.getId());
-
-        if (perfilOpt.isEmpty()) {
+        PerfilVendedor perfil = usuario.getPerfilVendedor();
+        if (perfil == null) {
             redirectAttributes.addFlashAttribute("error", "No tienes un perfil de vendedor");
             return "redirect:/vendedor/registro";
         }
 
         model.addAttribute("usuario", usuario);
-        model.addAttribute("perfilVendedor", perfilOpt.get());
-        return "perfil-vendedor"; // Vista del perfil
+        model.addAttribute("perfilVendedor", perfil);
+        return "perfil-vendedor";
     }
 
     /**
-     * Muestra formulario para editar el perfil de vendedor
+     * Formulario para editar el perfil de vendedor
      */
     @GetMapping("/editar")
-    public String mostrarFormularioEditar(HttpSession session, Model model, RedirectAttributes redirectAttributes) {
-        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
+    public String mostrarFormularioEditar(HttpSession session, Model model,
+            RedirectAttributes redirectAttributes) {
 
+        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
         if (usuario == null) {
             redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
             return "redirect:/usuario/login";
         }
 
-        Optional<PerfilVendedor> perfilOpt = vendedorService.obtenerPerfilPorUsuarioId(usuario.getId());
-
-        if (perfilOpt.isEmpty()) {
+        PerfilVendedor perfil = usuario.getPerfilVendedor();
+        if (perfil == null) {
             redirectAttributes.addFlashAttribute("error", "No tienes un perfil de vendedor");
             return "redirect:/vendedor/registro";
         }
 
         model.addAttribute("usuario", usuario);
-        model.addAttribute("perfilVendedor", perfilOpt.get());
-        return "editar-perfil-vendedor"; // Vista para editar
+        model.addAttribute("perfilVendedor", perfil);
+        return "editar-perfil-vendedor";
     }
 
     /**
      * Actualiza el perfil de vendedor
      */
     @PostMapping("/actualizar")
-    public String actualizarPerfil(@RequestParam("perfilId") int perfilId,
+    public String actualizarPerfil(
             @RequestParam("razonSocial") String razonSocial,
             @RequestParam("telefonoContacto") String telefonoContacto,
             @RequestParam("direccionNegocio") String direccionNegocio,
-            @RequestParam("tipoProductos") String tipoProductos,
             @RequestParam(value = "descripcionNegocio", required = false) String descripcionNegocio,
             @RequestParam(value = "cuentaBancaria", required = false) String cuentaBancaria,
             @RequestParam(value = "banco", required = false) String banco,
@@ -252,147 +229,134 @@ public class VendedorController {
             RedirectAttributes redirectAttributes) {
         try {
             Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
-
             if (usuario == null) {
                 redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
                 return "redirect:/usuario/login";
             }
 
-            vendedorService.actualizarPerfil(
-                    perfilId,
+            // Retorna el usuario actualizado con el perfil embebido modificado
+            Usuario usuarioActualizado = vendedorService.actualizarPerfil(
+                    usuario.getId(),
                     razonSocial,
                     telefonoContacto,
                     direccionNegocio,
-                    tipoProductos,
                     descripcionNegocio,
                     cuentaBancaria,
                     banco);
+
+            session.setAttribute("usuarioLogueado", usuarioActualizado);
 
             redirectAttributes.addFlashAttribute("mensaje", "Perfil actualizado exitosamente");
             return "redirect:/vendedor/perfil";
 
         } catch (Exception e) {
-            System.err.println("Error al actualizar perfil: " + e.getMessage());
             redirectAttributes.addFlashAttribute("error", "Error al actualizar el perfil");
             return "redirect:/vendedor/editar";
         }
     }
 
     /**
-     * Muestra todas las ventas (pedidos) del vendedor
+     * Ventas del vendedor
      */
     @GetMapping("/ventas")
-    public String mostrarVentas(HttpSession session, Model model, RedirectAttributes redirectAttributes) {
-        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
+    public String mostrarVentas(HttpSession session, Model model,
+            RedirectAttributes redirectAttributes) {
 
+        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
         if (usuario == null) {
             redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
             return "redirect:/usuario/login";
         }
-
         if (!vendedorService.esVendedor(usuario.getId())) {
             redirectAttributes.addFlashAttribute("error", "Debe registrarse como vendedor primero");
             return "redirect:/vendedor/registro";
         }
 
-        // Obtener todos los pedidos que contienen productos del vendedor
-        var pedidos = vendedorService.obtenerPedidosDelVendedor(usuario.getId());
-
-        // Obtener detalles de ventas
-        var detallesVentas = vendedorService.obtenerDetallesVentasDelVendedor(usuario.getId());
-
-        // Calcular total de ventas
+        List<Pedido> pedidos = vendedorService.obtenerPedidosDelVendedor(usuario.getId());
         double totalVentas = vendedorService.calcularTotalVentas(usuario.getId());
 
-        // Contar pedidos por estado
-        long pendientes = pedidos.stream().filter(p -> "PENDIENTE".equalsIgnoreCase(p.getEstado())).count();
-        long enProceso = pedidos.stream().filter(
-                p -> "EN_PROCESO".equalsIgnoreCase(p.getEstado()) || "PROCESANDO".equalsIgnoreCase(p.getEstado()))
-                .count();
-        long completados = pedidos.stream().filter(
-                p -> "COMPLETADO".equalsIgnoreCase(p.getEstado()) || "ENTREGADO".equalsIgnoreCase(p.getEstado()))
-                .count();
+        long pendientes = pedidos.stream()
+                .filter(p -> "PENDIENTE".equalsIgnoreCase(p.getEstado())).count();
+        long enProceso = pedidos.stream()
+                .filter(p -> "ENVIADO".equalsIgnoreCase(p.getEstado())).count();
+        long completados = pedidos.stream()
+                .filter(p -> "ENTREGADO".equalsIgnoreCase(p.getEstado())).count();
 
         model.addAttribute("usuario", usuario);
         model.addAttribute("pedidos", pedidos);
-        model.addAttribute("detallesVentas", detallesVentas);
         model.addAttribute("totalVentas", totalVentas);
         model.addAttribute("pendientes", pendientes);
         model.addAttribute("enProceso", enProceso);
         model.addAttribute("completados", completados);
 
-        return "ventas-vendedor"; // Vista de ventas
+        return "ventas-vendedor";
     }
 
     /**
-     * Muestra los detalles de un pedido específico
+     * Detalle de un pedido específico
      */
     @GetMapping("/ventas/pedido/{pedidoId}")
-    public String mostrarDetallePedido(@PathVariable int pedidoId,
-            HttpSession session,
-            Model model,
+    public String mostrarDetallePedido(@PathVariable String pedidoId,
+            HttpSession session, Model model,
             RedirectAttributes redirectAttributes) {
-        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
 
+        Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
         if (usuario == null) {
             redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
             return "redirect:/usuario/login";
         }
-
         if (!vendedorService.esVendedor(usuario.getId())) {
             redirectAttributes.addFlashAttribute("error", "Debe registrarse como vendedor primero");
             return "redirect:/vendedor/registro";
         }
 
-        // Obtener los detalles del pedido que pertenecen al vendedor
-        var detalles = vendedorService.obtenerDetallesPedidoDelVendedor(pedidoId, usuario.getId());
+        // El pedido completo tiene los items embebidos
+        Pedido pedido = vendedorService.obtenerPedidosDelVendedor(usuario.getId())
+                .stream()
+                .filter(p -> p.getId().equals(pedidoId))
+                .findFirst()
+                .orElse(null);
 
-        if (detalles.isEmpty()) {
+        if (pedido == null) {
             redirectAttributes.addFlashAttribute("error", "No tienes productos en este pedido");
             return "redirect:/vendedor/ventas";
         }
 
-        // Obtener el pedido completo
-        var pedido = detalles.get(0).getPedido();
-
         model.addAttribute("usuario", usuario);
         model.addAttribute("pedido", pedido);
-        model.addAttribute("detalles", detalles);
-
-        return "detalle-pedido-vendedor"; // Vista de detalle del pedido
+        model.addAttribute("items", pedido.getItems());
+        return "detalle-pedido-vendedor";
     }
 
     /**
      * Actualiza el estado de un pedido
      */
     @PostMapping("/ventas/pedido/{pedidoId}/actualizar-estado")
-    public String actualizarEstadoPedido(@PathVariable int pedidoId,
+    public String actualizarEstadoPedido(@PathVariable String pedidoId,
             @RequestParam("estado") String nuevoEstado,
             HttpSession session,
             RedirectAttributes redirectAttributes) {
         try {
             Usuario usuario = (Usuario) session.getAttribute("usuarioLogueado");
-
             if (usuario == null) {
                 redirectAttributes.addFlashAttribute("error", "Debe iniciar sesión primero");
                 return "redirect:/usuario/login";
             }
-
             if (!vendedorService.esVendedor(usuario.getId())) {
                 redirectAttributes.addFlashAttribute("error", "Debe registrarse como vendedor primero");
                 return "redirect:/vendedor/registro";
             }
 
-            vendedorService.actualizarEstadoPedido(pedidoId, usuario.getId(), nuevoEstado);
+            vendedorService.actualizarEstadoPedido(pedidoId, nuevoEstado);
 
-            redirectAttributes.addFlashAttribute("mensaje", "Estado del pedido actualizado exitosamente");
+            redirectAttributes.addFlashAttribute("mensaje", "Estado actualizado exitosamente");
             return "redirect:/vendedor/ventas/pedido/" + pedidoId;
 
         } catch (IllegalArgumentException e) {
             redirectAttributes.addFlashAttribute("error", e.getMessage());
             return "redirect:/vendedor/ventas";
         } catch (Exception e) {
-            redirectAttributes.addFlashAttribute("error", "Error al actualizar el estado del pedido");
+            redirectAttributes.addFlashAttribute("error", "Error al actualizar el estado");
             return "redirect:/vendedor/ventas";
         }
     }
